# SQL-workshop-do-notebook-ao-deploy

./: .env.dev  .env.prod  .gitignore  README.md  database.py  pyproject.toml
