[tool.poetry]
name = "sql-workshop-do-notebook-ao-deploy"
version = "0.1.0"
description = "Repositório destinado a criação do banco de dados utilizado no workshop"
authors = ["Daniel L. Alves <daniel.leonssio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
